columns spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 aside {
   float: right;
 }
@@ -16,15 +20,24 @@ aside {
   width: 33.33%;
 }
 
+.content-wrapper {
+  outline: 10px dashed magenta;
+}
+
+.column-wrapper {
+  width: 964px;
+  outline: dashed 5px turquoise;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .columnleft {
-  position: relative;
   width: 620px;
   height: 200px;
   display: inline-block;
   margin: 0 10px 0 10px;
 }
 .columnright {
-  position: relative;
   width: 300px;
   height: 100px;
   display: inline-block;
